// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressionButton renders correctly with a duration exceeding its creation date 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0%;
  }

  to {
    width: 100%;
  }
}

@keyframes animation-0 {
  from {
    width: 0%;
  }

  to {
    width: 100%;
  }
}

@keyframes animation-0 {
  from {
    width: 0%;
  }

  to {
    width: 100%;
  }
}

.cache-sqq3q3-ProgressionContainer {
  position: relative;
  text-align: center;
  color: white;
  font-weight: 500;
  z-index: 0;
  background: repeating-linear-gradient(
      45deg,
      #b2b6c3,
      #b2b6c3 10px,
      #c4c9d6 10px,
      #c4c9d6 30px
    );
  overflow: hidden;
  border-radius: 4px;
}

.cache-sqq3q3-ProgressionContainer:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.cache-1e3ado6-Progression {
  background-color: #22c8a2;
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  -webkit-animation: animation-0 10s linear 90s forwards;
  animation: animation-0 10s linear 90s forwards;
}

<div
    class="cache-sqq3q3-ProgressionContainer e1ojvqyi1"
    role="progressbar"
  >
    <div
      class="cache-1e3ado6-Progression e1ojvqyi0"
    />
    Progression
  </div>
</DocumentFragment>
`;

exports[`ProgressionButton renders correctly with a duration succeeding its creation date 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0%;
  }

  to {
    width: 100%;
  }
}

@keyframes animation-0 {
  from {
    width: 0%;
  }

  to {
    width: 100%;
  }
}

.cache-sqq3q3-ProgressionContainer {
  position: relative;
  text-align: center;
  color: white;
  font-weight: 500;
  z-index: 0;
  background: repeating-linear-gradient(
      45deg,
      #b2b6c3,
      #b2b6c3 10px,
      #c4c9d6 10px,
      #c4c9d6 30px
    );
  overflow: hidden;
  border-radius: 4px;
}

.cache-sqq3q3-ProgressionContainer:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.cache-1dswkix-Progression {
  background-color: #22c8a2;
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  -webkit-animation: animation-0 10s linear -90s forwards;
  animation: animation-0 10s linear -90s forwards;
}

<div
    class="cache-sqq3q3-ProgressionContainer e1ojvqyi1"
    role="progressbar"
  >
    <div
      class="cache-1dswkix-Progression e1ojvqyi0"
    />
    Progression
  </div>
</DocumentFragment>
`;

exports[`ProgressionButton renders correctly with a string as creation date 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0%;
  }

  to {
    width: 100%;
  }
}

.cache-sqq3q3-ProgressionContainer {
  position: relative;
  text-align: center;
  color: white;
  font-weight: 500;
  z-index: 0;
  background: repeating-linear-gradient(
      45deg,
      #b2b6c3,
      #b2b6c3 10px,
      #c4c9d6 10px,
      #c4c9d6 30px
    );
  overflow: hidden;
  border-radius: 4px;
}

.cache-sqq3q3-ProgressionContainer:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.cache-ap6wka-Progression {
  background-color: #22c8a2;
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  -webkit-animation: animation-0 120s linear 0s forwards;
  animation: animation-0 120s linear 0s forwards;
}

<div
    class="cache-sqq3q3-ProgressionContainer e1ojvqyi1"
    role="progressbar"
  >
    <div
      class="cache-ap6wka-Progression e1ojvqyi0"
    />
    Progression
  </div>
</DocumentFragment>
`;

exports[`ProgressionButton renders correctly with default values 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0%;
  }

  to {
    width: 100%;
  }
}

.cache-sqq3q3-ProgressionContainer {
  position: relative;
  text-align: center;
  color: white;
  font-weight: 500;
  z-index: 0;
  background: repeating-linear-gradient(
      45deg,
      #b2b6c3,
      #b2b6c3 10px,
      #c4c9d6 10px,
      #c4c9d6 30px
    );
  overflow: hidden;
  border-radius: 4px;
}

.cache-sqq3q3-ProgressionContainer:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.cache-ap6wka-Progression {
  background-color: #22c8a2;
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  -webkit-animation: animation-0 120s linear 0s forwards;
  animation: animation-0 120s linear 0s forwards;
}

<div
    class="cache-sqq3q3-ProgressionContainer e1ojvqyi1"
    role="progressbar"
  >
    <div
      class="cache-ap6wka-Progression e1ojvqyi0"
    />
    Progression
  </div>
</DocumentFragment>
`;
